<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kaval.android.inflow.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_progress"
        android:icon="@drawable/set_in_progress"
        android:orderInCategory="100"
        android:title="@string/action_to_progress"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_to_backlog"
        android:icon="@drawable/set_in_backlog"
        android:orderInCategory="100"
        android:title="@string/action_to_backlog"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_to_done"
        android:icon="@drawable/set_in_done"
        android:orderInCategory="100"
        android:title="@string/action_to_done"
        android:visible="false"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="always" />

</menu>
