<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addTaskOverlayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="129dp"
                tools:text="@string/add_new_task_title" />

            <TextView
                android:id="@+id/addTaskOverlayMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="215dp"
                tools:text="@string/add_new_task_message" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/overlay_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Task Name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/overlay_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_Description_label" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>